hphp/hack/test/extended_reasons/assign_list.php.exp
error: Typing[4110] Invalid argument [1]
-> Expected Sub [2]
-> But got Super [3]
-> Here's why: this hint [3]
-> flows into this type variable [4]
-> which itself flows into this hint [2]

assign_list.php:10:7
     4 | class Sub extends Super {}
     5 | 
[2]  6 | function foo(Sub $_): void {}
     7 | 
[3]  8 | function bar_1((string,Super,bool) $xyz): void {
[4]  9 |   list($_, $y, $_) = $xyz;
[1] 10 |   foo($y);
    11 | }

1 error found.
